# torque_controllers

./: CITATION.cff  README.MD
example_robots/: CMakeLists.txt  package.xml
example_robots/config/: common.rviz
example_robots/iiwa_description/: README
example_robots/iiwa_description/config/: iiwa14_controller.yaml
example_robots/iiwa_description/urdf/: iiwa14.urdf  iiwa14.xacro  iiwa14example.xacro
example_robots/launch/: display_launch.py  gazebo_franka_bringup.launch.py  gazebo_launch.py  iiwa14_bringup_launch.py  planar_robots_launch.py
example_robots/planar_robots/config/: default.rviz  r2_controller.yaml  test_controller.yaml
example_robots/planar_robots/urdf/: planar_r1.urdf  planar_r2.urdf
foxglove_config/: joint_position.json  joint_velocity.json
torque_control_tests/: CMakeLists.txt  main  package.xml  test.csv
torque_control_tests/config/: inverseDynamicsControl.yaml
torque_control_tests/data/: dataMinJerkSample_1.csv  dataMinJerkTrajSample_2.csv  dataTrapVelTrajSample_1.csv  dataTrapVelTrajSample_2.csv
torque_control_tests/include/torque_control_tests/: inverseDynamicsControl.hpp
torque_control_tests/src/: franka_examples_tests.cpp  gravityCompensation.cpp  iDControl.cpp  iDControlVer2.cpp  inverseDynamicsControl.cpp  main  main.cpp  pdGravityControl.cpp  planar_r2.cpp
torque_controller/: CMakeLists.txt  package.xml  torque_controller.xml
torque_controller/include/torque_controller/: torque_control.hpp  torque_controller.hpp  visibility_controller.h
torque_controller/msg/: Commands.msg
torque_controller/params/: torque_controller_parameters.yaml
torque_controller/src/: torque_controller.cpp  torque_controller_parameters.yaml
torque_msgs/: CMakeLists.txt  package.xml
torque_msgs/msg/: Commands.msg
